<resources>
    <string name="app_name">UnivApp</string>
    <string name="tvAmount_example">2 пары</string>
    <string name="tvTimeStartEnd_example">11:40 – 18:35</string>
    <string name="tvDate_example">14.10</string>
    <string name="subject_name_example">Управление данными в корпоративных информационных системах (Л)</string>
    <string name="room_number_example">ауд. 301</string>
    <string name="prompt_username">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">ВОЙТИ</string>
    <string name="enter_as_example">ВОЙТИ КАК</string>
    <string name="student_btn_text_example">СТУДЕНТ</string>
    <string name="teacher_btn_text_example">ПРЕПОДОВАТЕЛЬ</string>
    <string name="muiv_logo_image">muivLogo</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_schedule">Schedule</string>
    <string name="week_days_example">24.10 – 30.10</string>
    <string name="previous_week_btn">previous week button</string>
    <string name="next_week_btn">next week button</string>
    <string name="week_day_example">ВТОРНИК</string>
    <string name="tv_time_start_example">08:20</string>
    <string name="tv_time_end_example">18:35</string>
    <string name="subject_details_example">Блощук А.А. | Лекция | Ауд. 505</string>
    <string name="info_icon">info icon</string>
    <string name="info_title">ИНФОРМАЦИЯ</string>
    <string name="student_name_example">Иванов\nАлександр</string>
    <string name="student_group_example">ИД 23.2/Б1–19</string>
    <string name="student_course_and_semester_example">4 курс | 1 семестр</string>
    <string name="subject_type_example">ЛЕКЦИЯ</string>
    <string name="icon_date">icon date</string>
    <string name="teacher_name_example">Блощук Андрей Алексеевич</string>
    <string name="date_example">24 ноября, Понедельник 8:20 – 9:50</string>
    <string name="attendance_text">Присутствие на паре</string>
    <string name="notes_text">Заметки</string>
    <string name="notes_hint">Введите текст</string>
    <string name="attendance_button">attendance at the class</string>
    <string name="topic_example">Разобрать тему лекции \"Общие принциаы реализации запросов\" \n\nПодготовиться к СПЗ"</string>
    <string name="attendance_as_text">Н</string>
    <string name="dialog_tv_question">ВЫ ПРИСУТСТВУЕТЕ НА ДАННОЙ ПАРЕ?</string>
    <string name="dialog_btn_yes">ДА</string>
    <string name="dialog_btn_cancel">ОТМЕНИТЬ</string>
    <string name="notifications_title">УВЕДОМЛЕНИЯ</string>
    <string name="notification_title_example">Изменение в расписании!</string>
    <string name="notification_text_example">Уважаемые студенты! Произошли изменения в расписание на следующей неделе!</string>
    <string name="user_attendance_percent">Примерная посещаемость в этом семестре:</string>
    <string name="user_profile_title">ЛИЧНЫЙ КАБИНЕТ</string>
    <string name="user_attendance_amount">Посещено:</string>
    <string name="user_current_subjects">Дисциплины в текущем семестре</string>
    <string name="user_subject_details_example">Блощук А.А. | Экзамен</string>
    <string name="title_profile">Profile</string>
    <string name="patch_top">вверхная плашка</string>
    <string name="text_login_title">РАСПИСАНИЕ ЗАНЯТИЙ</string>
    <string name="no_schedule_text">Расписание отсутствует</string>
    <string name="schedule_channel_name">Schedule</string>
    <string name="new_schedule_title">New Schedule</string>
    <string name="new_schedule_text">You have a new schedule.</string>
    <string name="univ_notification_channel_name">UnivNotification</string>
    <string name="new_univ_notification_title">New UnivNotification</string>
    <string name="new_univ_notification_text">You have a new notification.</string>
</resources>