<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/muiv_logo_image" />

    <ImageButton
        android:id="@+id/ibPrevWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:background="@drawable/round_button"
        android:contentDescription="@string/previous_week_btn"
        android:minWidth="28dp"
        android:minHeight="28dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="@id/tvWeekDays"
        app:layout_constraintRight_toLeftOf="@id/tvWeekDays"
        app:layout_constraintTop_toTopOf="@id/tvWeekDays" />

    <ImageButton
        android:id="@+id/ibNextWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:background="@drawable/round_button"
        android:contentDescription="@string/next_week_btn"
        android:minWidth="28dp"
        android:minHeight="28dp"
        android:src="@drawable/ic_baseline_arrow_forward_24"
        app:layout_constraintBottom_toBottomOf="@id/tvWeekDays"
        app:layout_constraintLeft_toRightOf="@id/tvWeekDays"
        app:layout_constraintTop_toTopOf="@id/tvWeekDays" />

    <TextView
        android:id="@+id/tvWeekDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/week_days_example"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/schedule_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintTop_toBottomOf="@id/tvWeekDays"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="55dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>