<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.43"/>

    <ImageView
        android:id="@+id/patch_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/patch_top"
        android:scaleType="fitXY"
        app:layout_constraintHeight="105dp"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/patch_top" />

    <ImageView
        android:id="@+id/muivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineVertical"
        android:contentDescription="@string/muiv_logo_image" />

    <TextView
        android:id="@+id/tvStudentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/student_name_example"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/gothampro_bold"
        app:layout_constraintTop_toTopOf="@id/muivLogo"
        app:layout_constraintStart_toEndOf="@id/guidelineVertical"/>

    <TextView
        android:id="@+id/tvStudentGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_group_example"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/gothampro_medium"
        app:layout_constraintTop_toBottomOf="@id/tvStudentName"
        app:layout_constraintStart_toStartOf="@id/tvStudentName"
        app:layout_constraintBottom_toTopOf="@id/tvStudentCourseAndSemester"/>

    <TextView
        android:id="@+id/tvStudentCourseAndSemester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_course_and_semester_example"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/gothampro_medium"
        app:layout_constraintStart_toStartOf="@id/tvStudentGroup"
        app:layout_constraintBottom_toBottomOf="@id/muivLogo"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment_activity_user"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:defaultNavHost="true"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toBottomOf="@id/patch_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:navGraph="@navigation/mobile_navigation" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/patch_bottom"
        app:itemIconTint="@color/bottom_navigation_selector"
        app:itemIconSize="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu"
        app:itemActiveIndicatorStyle="@style/ActiveIndicator"
        app:labelVisibilityMode="unlabeled" />

</androidx.constraintlayout.widget.ConstraintLayout>