<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/schedule_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionGroup="true"
    tools:context=".ui.navigation.schedule.ScheduleFragment">

    <ImageView
        android:id="@+id/icon_background"
        android:layout_width="@dimen/fragment_icon_size_background"
        android:layout_height="@dimen/fragment_icon_size_background"
        android:background="@drawable/round_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/info_icon" />

    <ImageView
        android:layout_width="@dimen/fragment_icon_size"
        android:layout_height="@dimen/fragment_icon_size"
        app:layout_constraintTop_toTopOf="@id/icon_background"
        app:layout_constraintStart_toStartOf="@id/icon_background"
        app:layout_constraintEnd_toEndOf="@id/icon_background"
        app:layout_constraintBottom_toBottomOf="@id/icon_background"
        app:srcCompat="@drawable/ic_schedule"
        android:contentDescription="@string/info_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_title"
        style="@style/FragmentMainTitle"
        app:layout_constraintTop_toTopOf="@id/icon_background"
        app:layout_constraintStart_toEndOf="@id/icon_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/icon_background" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/recycler_view_margin_top"
        app:layout_constraintTop_toBottomOf="@id/icon_background">

        <ScrollView
            android:id="@+id/svScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="110dp"
                >

                <TextView
                    android:id="@+id/tvSubjectName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    android:text="@string/subject_name_example"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:lineSpacingExtra="2dp"
                    android:fontFamily="@font/montserrat_bold"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/tvSubjectType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/subject_type_example"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/primary"
                    android:fontFamily="@font/montserrat_extrabold"
                    app:layout_constraintTop_toBottomOf="@id/tvSubjectName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <ImageView
                    android:id="@+id/iconDate"
                    android:layout_width="@dimen/schedule_fragment_icon_size"
                    android:layout_height="@dimen/schedule_fragment_icon_size"
                    android:layout_marginStart="@dimen/schedule_fragment_icon_margin_start"
                    android:contentDescription="@string/icon_date"
                    android:src="@drawable/ic_date"
                    app:layout_constraintTop_toTopOf="@id/tvDate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/tvDate"/>

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_example"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:fontFamily="@font/montserrat_medium"
                    app:layout_constrainedWidth="true"
                    app:layout_constrainedHeight="true"
                    app:layout_constraintTop_toBottomOf="@id/tvSubjectType"
                    app:layout_constraintStart_toEndOf="@+id/iconDate"
                    app:layout_constraintEnd_toEndOf="parent" />

                <!-- Separate line -->
                <View
                    android:id="@+id/separateLine1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/separate_line"
                    app:layout_constraintTop_toBottomOf="@id/tvDate"/>

                <ImageView
                    android:id="@+id/iconTeacherName"
                    android:layout_width="@dimen/schedule_fragment_icon_size"
                    android:layout_height="@dimen/schedule_fragment_icon_size"
                    android:layout_marginStart="@dimen/schedule_fragment_icon_margin_start"
                    android:layout_marginTop="@dimen/schedule_fragment_icon_margin_top"
                    android:contentDescription="@string/icon_date"
                    android:src="@drawable/ic_teacher"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/separateLine1" />

                <TextView
                    android:id="@+id/tvTeacherName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/teacher_name_example"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:fontFamily="@font/montserrat_medium"
                    app:layout_constrainedWidth="true"
                    app:layout_constrainedHeight="true"
                    app:layout_constraintTop_toTopOf="@id/iconTeacherName"
                    app:layout_constraintStart_toEndOf="@id/iconTeacherName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/iconTeacherName"/>

                <!-- Separate line -->
                <View
                    android:id="@+id/separateLine2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/separate_line"
                    app:layout_constraintTop_toBottomOf="@id/tvTeacherName"/>

                <ImageView
                    android:id="@+id/iconLocation"
                    android:layout_width="@dimen/schedule_fragment_icon_size"
                    android:layout_height="@dimen/schedule_fragment_icon_size"
                    android:layout_marginStart="@dimen/schedule_fragment_icon_margin_start"
                    android:layout_marginTop="@dimen/schedule_fragment_icon_margin_top"
                    android:contentDescription="@string/icon_date"
                    android:src="@drawable/ic_location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/separateLine2" />

                <TextView
                    android:id="@+id/tvRoom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/room_number_example"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:fontFamily="@font/montserrat_medium"
                    app:layout_constrainedWidth="true"
                    app:layout_constrainedHeight="true"
                    app:layout_constraintTop_toTopOf="@id/iconLocation"
                    app:layout_constraintStart_toEndOf="@id/iconLocation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/iconLocation"/>

                <View
                    android:id="@+id/rectangleContainer"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/primary"
                    app:layout_constraintTop_toBottomOf="@id/iconLocation" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineVertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.7" />

                <TextView
                    android:id="@+id/attendanceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/attendance_text"
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:fontFamily="@font/montserrat_medium"
                    app:layout_constrainedWidth="true"
                    app:layout_constrainedHeight="true"
                    app:layout_constraintTop_toTopOf="@id/rectangleContainer"
                    app:layout_constraintStart_toStartOf="@id/iconLocation"
                    app:layout_constraintEnd_toStartOf="@id/guidelineVertical"
                    app:layout_constraintBottom_toBottomOf="@id/rectangleContainer"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnAttendance"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/attendance_as_text"
                    android:textSize="25sp"
                    android:textColor="@android:color/white"
                    android:textAlignment="center"
                    android:background="@drawable/attendance_button_no"
                    android:gravity="center"
                    android:fontFamily="@font/montserrat_extrabold"
                    android:contentDescription="@string/attendance_button"
                    style="?android:borderlessButtonStyle"
                    app:layout_constraintTop_toTopOf="@id/rectangleContainer"
                    app:layout_constraintStart_toEndOf="@id/guidelineVertical"
                    app:layout_constraintBottom_toBottomOf="@id/rectangleContainer" />

                <TextView
                    android:id="@+id/notesTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/notes_text"
                    android:textSize="20sp"
                    android:fontFamily="@font/montserrat_medium"
                    app:layout_constraintTop_toBottomOf="@id/rectangleContainer"
                    app:layout_constraintStart_toStartOf="parent"/>

                <EditText
                    android:id="@+id/etNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:gravity="start"
                    android:hint="@string/notes_hint"
                    android:background="@drawable/round_border_14"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="50"
                    android:maxLines="3"
                    android:minLines="2"
                    android:autofillHints=""
                    android:fontFamily="@font/montserrat"
                    app:layout_constraintTop_toBottomOf="@id/notesTitle"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/lastItem"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/topic_example"
                    android:textAlignment="textStart"
                    app:layout_constraintTop_toBottomOf="@id/etNotes"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
